new changes for iteration 0.1

--- a/index.html
+++ b/index.html
@@ -791,7 +791,7 @@
             <div class="reasons">
                 <div class="reason-card fade-in stagger-delay-1">
                     <h3>Iskusni i profesionalni tim</h3>
-                    <p>Naš tim čine iskusni stručnjaci sa dugogodišnjim iskustvom u održavanju bazena različitih veličina i tipova. Svaki član tima prošao je specijalizovanu obuku i poseduje sertifikate koji potvrđuju njihovu stručnost.</p>
+                    <p>Naš tim čine ljudi koji se već godinama bave održavanjem bazena i koji su kroz razne situacije na terenu stekli znanje. Radili smo na svim mogućim vrstama bazena, i svuda smo naučili nešto novo. Upravo to iskustvo nam omogućava da brzo prepoznamo problem, pronađemo rešenje i bazen dovedemo u top stanje. Verujemo u temeljnost, preciznost i dobru komunikaciju s klijentima – jer čist bazen ne dolazi sam od sebe.</p>
                 </div>
                 <div class="reason-card fade-in stagger-delay-2">
                     <h3>Kvalitetni proizvodi i oprema</h3>
@@ -803,7 +803,7 @@
                 </div>
                 <div class="reason-card fade-in stagger-delay-4">
                     <h3>Transparentne cene</h3>
-                    <p>Verujemo u potpunu transparentnost kada su u pitanju naše usluge i cene. Nema skrivenih troškova ni neprijatnih iznenađenja. Pre početka saradnje dobićete detaljnu ponudu sa jasno navedenim cenama svih usluga.</p>
+                    <p><b>Cena naših usluga</b> čišćenja zavisi od veličine bazena i udaljenosti lokacije. Da bismo vam dali tačnu ponudu, kontaktirajte nas putem telefona ili poruke. Rado ćemo vam pružiti sve potrebne informacije!</p>
                 </div>
             </div>
         </div>
@@ -902,16 +902,16 @@
                 <div class="contact-item fade-in stagger-delay-1">
                     <div class="contact-icon float">📱</div>
                     <h3>Telefon</h3>
-                    <a href="tel:+381603291019" class="contact-link">+381 11 123 4567</a>
+                    <a href="tel:+381603291019" class="contact-link">+381 60 329 1019</a>
                 </div>
                 <div class="contact-item fade-in stagger-delay-2">
                     <div class="contact-icon float">📸</div>
                     <h3>Instagram</h3>
-                    <a href="https://www.instagram.com/robert.galko/" target="_blank" class="contact-link">@robert.galko</a>
+                    <a href="https://www.instagram.com/pool.cleaning.service/" target="_blank" class="contact-link">@pool.cleaning.service</a>
                 </div>
             </div>
             <div style="text-align: center; margin-top: 3rem;" class="fade-in stagger-delay-3">
-                <a href="tel:+381111234567" class="btn">Pozovite nas</a>
+                <a href="tel:+381603291019" class="btn">Pozovite nas</a>
             </div>
         </div>
     </section>
@@ -935,8 +935,8 @@
                     <h4>Kontakt informacije</h4>
                     <ul>
                         <li>Adresa: Mornarska 11, Novi Sad</li>
-                        <li>Telefon: <a href="tel:+381111234567" style="color: inherit;">+381 11 123 4567</a></li>
-                        <li>Instagram: <a href="https://www.instagram.com/robert.galko/" target="_blank" style="color: inherit;">@robert.galko</a></li>
+                        <li>Telefon: <a href="tel:+381603291019" style="color: inherit;">+381 60 329 1019</a></li>
+                        <li>Instagram: <a href="https://www.instagram.com/robert.galko/" target="_blank" style="color: inherit;">@pool.cleaning.service</a></li>
                     </ul>
                 </div>
             </div>
