--- a/index.html
+++ b/index.html
@@ -30,7 +30,34 @@
             line-height: 1.6;
             overflow-x: hidden;
         }
-        
+        .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        padding-top: 80px;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0,0,0,0.9);
+        }
+
+        .modal img {
+        margin: auto;
+        display: block;
+        max-width: 90%;
+        max-height: 90%;
+        }
+
+        .close-modal {
+        position: absolute;
+        top: 20px;
+        right: 30px;
+        color: #fff;
+        font-size: 35px;
+        font-weight: bold;
+        cursor: pointer;
+        }
         .fade-in {
             opacity: 0;
             transform: translateY(30px);
@@ -891,7 +918,11 @@
             </div>
         </div>
     </section>
-
+    <div id="imageModal" class="modal">
+        <span class="close-modal">&times;</span>
+        <img class="modal-content" id="modalImg">
+      </div>
+      
     <section id="kontakt">
         <div class="container">
             <div class="section-title fade-in">
@@ -959,6 +990,22 @@
     </div>
 
     <script>
+        document.querySelectorAll('.gallery-item img').forEach(img => {
+        img.addEventListener('click', (e) => {
+            document.getElementById('imageModal').style.display = 'block';
+            document.getElementById('modalImg').src = e.target.src;
+        });
+        });
+
+        document.querySelector('.close-modal').onclick = () => {
+        document.getElementById('imageModal').style.display = 'none';
+        };
+
+        window.onclick = (event) => {
+        if (event.target == document.getElementById('imageModal')) {
+            document.getElementById('imageModal').style.display = 'none';
+        }
+        };
         // Fade-in animacija pri skrolanju
         document.addEventListener('DOMContentLoaded', function() {
             // Odma aktiviraj hero animaciju
