galkos interation 0.3 debil

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
             <div class="reasons">
                 <div class="reason-card fade-in stagger-delay-1">
                     <h3>Iskusni i profesionalni tim</h3>
-                    <p>Naš tim čine ljudi koji se već godinama bave održavanjem bazena i koji su kroz razne situacije na terenu stekli znanje. Radili smo na svim mogućim vrstama bazena, i svuda smo naučili nešto novo. Upravo to iskustvo nam omogućava da brzo prepoznamo problem, pronađemo rešenje i bazen dovedemo u top stanje. Verujemo u temeljnost, preciznost i dobru komunikaciju s klijentima – jer čist bazen ne dolazi sam od sebe.</p>
+                    <p>Radili smo na svim mogućim vrstama bazena, i svuda smo naučili nešto novo. Upravo to iskustvo nam omogućava da brzo prepoznamo problem, pronađemo rešenje i bazen dovedemo u top stanje. Verujemo u temeljnost, preciznost i dobru komunikaciju s klijentima – jer čist bazen ne dolazi sam od sebe.</p>
                 </div>
                 <div class="reason-card fade-in stagger-delay-2">
                     <h3>Kvalitetni proizvodi i oprema</h3>
